--- a/blast_html.html.jinja
+++ b/blast_html.html.jinja
@@ -55,8 +55,11 @@
       font-weight: bold;
       }
 
+      .index {
+      margin-bottom: 3em;
+      }
       .index div.indexentry {
-      margin: .6em;
+      margin: 1.2em 1.6em;
       font-weight: bold;
       font-size: 100%;
       }
@@ -377,7 +380,7 @@
             ({{result|len}} letters, {{hits|length}} hits)
         </a></div>
         {% endfor %}
-        
+
       </section>
       {% endif %}
 
