--- a/blast2html.html.jinja
+++ b/blast2html.html.jinja
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name=generator content="blast_html; see ...">
+    <meta name=generator content="blast2html; see ...">
     
     <title>Blast output</title>
     
